Fixed navbar background on small devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -380,6 +380,8 @@ h1 {
   margin-bottom: 20px;
 }
 
-.affix-top  {
-  background: none;
+@media (min-width: 768px) {
+  .affix-top  {
+    background: none;
+  }
 }
